ATS v4.1.0 - Java 21 compilation - upgrade aspectj plugin and aspectjrt to 1.9.24 - xercesImp - exclude xml-apis dependency - upgrade Powermock and easymock, byte-buddy - upgrade reload4j - appium java-client to 7.6.0 - EnvCleanup - comment some tests with mocks